Setup for Apache

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,15 @@
         "propel/propel": "~2.0-dev",
         "slim/slim": "^4.5",
         "slim/psr7": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Duppy\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Duppy\\Tests\\": "tests/"
+        }
     }
 }
