--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "propel/propel": "~2.0-dev",
         "slim/slim": "^4.5",
-        "slim/psr7": "^1.0"
+        "slim/psr7": "^1.0",
+        "vlucas/phpdotenv": "^4.1"
     },
     "autoload": {
         "psr-4": {
