--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "require": {
-        "propel/propel": "~2.0-dev",
         "slim/slim": "^4.5",
         "slim/psr7": "^1.0",
         "vlucas/phpdotenv": "^4.1",
-        "illuminate/database": "^7.9",
-        "php-di/php-di": "^6.1"
+        "php-di/php-di": "^6.1",
+        "doctrine/orm": "^2.7"
     },
     "autoload": {
         "psr-4": {
