--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "vlucas/phpdotenv": "^4.1",
         "php-di/php-di": "^6.1",
         "doctrine/orm": "^2.7",
-        "ramsey/uuid-doctrine": "^1.6"
+        "ramsey/uuid-doctrine": "^1.6",
+        "yosymfony/toml": "^1.0"
     },
     "autoload": {
         "psr-4": {
