--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/Mods/duppy-forums"]
-	path = src/Mods/duppy-forums
+[submodule "src/Mods/Forums"]
+	path = src/Mods/Forums
 	url = https://github.com/dreamingg/duppy-forums/
