Add PHPMailer, configure in Bootstrapper & .env entries

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ DB_DATABASE=
 JWT_SECRET=
 JWT_ENCRYPT=
 CLIENT_URL=
+SMTP=false
+SMTP_HOST=
+SMTP_USER=
+SMTP_PASS=
+SMTP_SECURE=
+SMTP_PORT=
+EMAIL_FROM=
