--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "ramsey/uuid-doctrine": "^1.6",
         "yosymfony/toml": "^1.0",
         "hybridauth/hybridauth": "^3.6",
-        "web-token/jwt-framework": "^2.2"
+        "web-token/jwt-framework": "^2.2",
+        "phpmailer/phpmailer": "^6.2"
     },
     "autoload": {
         "psr-4": {
