--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "hybridauth/hybridauth": "^3.6",
         "web-token/jwt-framework": "^2.2",
         "phpmailer/phpmailer": "^6.2",
-        "eftec/bladeone": "^3.47"
+        "eftec/bladeone": "^3.47",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "autoload": {
         "psr-4": {
