--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
         "web-token/jwt-framework": "^2.2",
         "phpmailer/phpmailer": "^6.2",
         "eftec/bladeone": "^3.47",
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^7.2",
+        "ext-dom": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     },
     "autoload": {
         "psr-4": {
