--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "ext-dom": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "phing/phing": "^2.0",
+        "pdepend/pdepend": "^2.8"
     },
     "autoload": {
         "psr-4": {
