--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,9 @@
 #!/usr/bin/env groovy
 
-node {
+pipeline {
+    agent any
 
     stage('Update Dependencies') {
-
         chmod +x scripts/*
 
         scripts/clean.sh
@@ -11,13 +11,9 @@ node {
 
         composer update
         tools/phive update
-
     }
 
     stage('Execute Phing Tasks') {
-
         vendor/bin/phing all
-
     }
-
 }
