Jenkins file fix, use commandline to invoke phing

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
 
         stage('Execute Phing Tasks') {
             steps {
-                phing "all"
+                sh "phing all"
             }
         }
     }
