--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "phpmailer/phpmailer": "^6.2",
         "eftec/bladeone": "^3.47",
         "guzzlehttp/guzzle": "^7.2",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "spatie/enum": "^3.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
