--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "eftec/bladeone": "^3.47",
         "guzzlehttp/guzzle": "^7.2",
         "ext-dom": "*",
-        "spatie/enum": "^3.6"
+        "spatie/enum": "^3.6",
+        "geertw/ip-anonymizer": "^1.1",
+        "touhonoob/rate-limit": "^2.0",
+        "akrabat/ip-address-middleware": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
