Workerman support, DCallable, Dependency object, other small cleans

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
 DUPPY_DEVELOPMENT=true
+
 DB_HOST=
-DB_USER=
+DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
+
 JWT_SECRET=
 JWT_ENCRYPT=
-CLIENT_URL=
-MAIL=false
-MAILTYPE=#can be smtp
-SMTP=false
-SMTP_HOST=
-SMTP_USER=
-SMTP_PASS=
+API_URL=
+
+# only required when mail settings are set to SMTP
+SMTP_USERNAME=
+SMTP_PASSWORD=
 SMTP_SECURE=
-SMTP_PORT=
-EMAIL_FROM=
-EMAIL_REPLYTO=
+
+# if using workerman server.php
+WORKERMAN_PORT=
+WORKERMAN_WORKERS= # Threads/"Workers"
