--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "ext-dom": "*",
         "spatie/enum": "^3.6",
         "geertw/ip-anonymizer": "^1.1",
-        "touhonoob/rate-limit": "^2.0",
         "akrabat/ip-address-middleware": "^2.0",
         "workerman/workerman": "^4.0",
-        "workerman/psr7": "^1.4"
+        "workerman/psr7": "^1.4",
+        "ext-memcached": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
