--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "duppy/api",
+    "description": "Modular PHP 8 REST-ful API",
+    "version": "2.0.0-dev",
+
     "repositories":
     [
         {
@@ -26,12 +30,14 @@
         "akrabat/ip-address-middleware": "^2.0",
         "workerman/workerman": "^4.0",
         "workerman/psr7": "^1.4",
+        "palepurple/rate-limit": "^2.0",
         "ext-memcached": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "phing/phing": "^2.0",
-        "pdepend/pdepend": "^2.8"
+        "pdepend/pdepend": "^2.8",
+        "jetbrains/phpstorm-attributes": "^1.0"
     },
     "autoload": {
         "psr-4": {
