--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,15 @@
         "workerman/workerman": "^4.0",
         "workerman/psr7": "^1.4",
         "palepurple/rate-limit": "^2.0",
-        "ext-memcached": "*"
+        "ext-memcached": "*",
+        "middlewares/whoops": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "phing/phing": "^2.0",
         "pdepend/pdepend": "^2.8",
-        "jetbrains/phpstorm-attributes": "^1.0"
+        "jetbrains/phpstorm-attributes": "^1.0",
+        "filp/whoops": "^2.12"
     },
     "autoload": {
         "psr-4": {
